--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/levels/BaseLevel/BaseLevel.BaseLevel
-EditorStartupMap=/Game/levels/BaseLevel/BaseLevel.BaseLevel
-GlobalDefaultGameMode=/Game/levels/BaseLevel/BaseLevelGameMode.BaseLevelGameMode_C
+GameDefaultMap=/Game/levels/SnakeLevel/SnakeLevel.SnakeLevel
+EditorStartupMap=/Game/levels/SnakeLevel/SnakeLevel.SnakeLevel
+GlobalDefaultGameMode=/Game/levels/SnakeLevel/BP_SnakeLevelGameMode.BP_SnakeLevelGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
