--- a/AsrockTest2.uproject
+++ b/AsrockTest2.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "AsrockTest2",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
