--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Level/SnakeLevel.SnakeLevel
 EditorStartupMap=/Game/Level/SnakeLevel.SnakeLevel
+GlobalDefaultGameMode=/Game/BluePrint/BP_SnakeGameMode.BP_SnakeGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
