--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -67,7 +67,9 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 bEnableGestureRecognizer=False
@@ -76,6 +78,14 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Action_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
++ActionMappings=(ActionName="Action_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="Action_Up",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="Action_Down",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++AxisMappings=(AxisName="Input_Left",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Input_Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Input_Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Input_Back",Scale=1.000000,Key=S)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
